--- a/about.html
+++ b/about.html
@@ -13,11 +13,12 @@
     </head>
 
     <body>
-        <div class="container_fluid">
-            <img src="imgs/banner.jpg" id="banner">
-        </div>
-
         <div class="container">
+            <!--Banner-->
+            <div class="row">
+                <img src="imgs/banner.jpg" id="banner">
+            </div>
+
             <div class="row">
 
                 <!--Sidebar-->
@@ -28,6 +29,31 @@
 
                 <!--Content-->
                 <div class="col-lg-10" style="background-color: white;">
+                    <h1>About</h1>
+                    <h3>What is Tactical CAD?</h3>
+                    <p>Tactical CAD is a place where you can download CAD models of various Nerf upgrades and parts so that you can print them out yourself! </p>
+                    <br>
+                    <h3>Where do the parts come from?</h3>
+                    <p>I build the parts myself, and print them out to test fitment. Any CAD parts I don't get to print out I put into the prototype category, but otherwise everything else is confirmed to fit.</p>
+                    <br>
+                    <h3>Will there be updates often here?</h3>
+                    <p>I don't know. This is a side project of mine and college precedes it. It also depends on whether I have any ideas on what to make.</p>
+                    <br>
+                    <h3>Why the limited selection?</h3>
+                    <p>Again, college. Also, I only have a limited number of Nerfs, and I'm not willing to make parts based on theoretical measurements. Here's the full list of what I own:</p>
+                    <ul>
+                        <li>Retaliator</li>
+                        <li>Firestrike</li>
+                        <li>Speedload 6</li>
+                    </ul>
+                    <br>
+                    <h3>Can I suggest or submit new parts?</h3>
+                    <p>Sure! As long as I have the Nerf I can make it! Just send me an email with the request! I can't guarantee a timescale, but I will definitely reply whether or not it will be feasible.</p>
+                    <p>You can also submit your own CAD files if you want! I only ask that you can confirm fitment and send me a picture of that fitment for the product page. Credit will be given also, so give me some kind of alias or name when you email me the part.</p>
+                    <br>
+                    <h3>Contact</h3>
+                    <p>For any questions or suggestions just use the email below<p>
+                    <p>Email: tacticalcad@gmail.com</p>
 
                 </div>
 
