--- a/lists/prototypes.html
+++ b/lists/prototypes.html
@@ -13,11 +13,12 @@
     </head>
 
     <body>
-        <div class="container_fluid">
-            <img src="../imgs/banner.jpg" id="banner">
-        </div>
-
         <div class="container">
+            <!--Banner-->
+            <div class="row">
+                <img src="imgs/banner.jpg" id="banner">
+            </div>
+
             <div class="row">
 
                 <!--Sidebar-->
