--- a/lists/universal.html
+++ b/lists/universal.html
@@ -16,7 +16,7 @@
         <div class="container">
             <!--Banner-->
             <div class="row">
-                <img src="../imgs/banner.jpg" id="banner">
+                <img src="/TacticalCad/imgs/banner.jpg" id="banner">
             </div>
 
             <div class="row">
