Designed list format, item format Tested format and links for Firestrike part

--- a/lists/firestrike.html
+++ b/lists/firestrike.html
@@ -29,6 +29,40 @@
 
                 <!--Content-->
                 <div class="col-lg-10" style="background-color: white;">
+                    <h1>Nerf Firestrike Parts</h1>
+                    <p>The Firestrike is a single-shot spring powered blaster made by Nerf. It is a very reliable secondary, as it is both powerful and accurate. The simple internals make it an ideal beginners blaster to modify.</p>
+
+                    <!--Spacer-->
+                    <div class="col-lg-1">
+                    </div>
+
+                    <!--Column 1-->
+                    <div class="col-lg-4">
+
+                        <a href="/TacticalCad/products/ffrs.html">
+                            <li class="itemTile">
+                                <img src="/TacticalCad/products/imgs/ffrs/cad.jpg">
+                                <h3>Three-Post Iron Sights</h3>
+                                <p>Front and rear 3-post iron sights</p>
+                            </li>
+                        </a>
+                    </div>
+
+                    <!--Spacer-->
+                    <div class="col-lg-2">
+                    </div>
+
+                    <!--Column 2-->
+                    <div class="col-lg-4">
+                        <li class="itemTile">
+                            <h3>Part2</h3>
+                        </li>
+
+                    </div>
+
+                    <!--Spacer-->
+                    <div class="col-lg-1">
+                    </div>
 
                 </div>
 
