Added picture to ffrs, changed layout a bit

--- a/products/ffrs.html
+++ b/products/ffrs.html
@@ -31,13 +31,16 @@
                 <div class="col-lg-10" style="background-color: white;">
                     <div class="col-lg-6">
                         <h2>Firestrike Three-Post Iron Sights</h2>
+                        <img src="imgs/ffrs/cad.jpg">
                     </div>
 
                     <div class="col-lg-6">
-                        <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBLUtQWG5XNm5kU2s" download="ffs"><h1>DOWNLOAD FRONT</h1></a> <!--Replace these with a picture-->
-                        <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBTXMxRUR5eldBWFE" download="frs"><h1>DOWNLOAD REAR</h1></a>
+                        <br><br><br>
                         <p>These removable iron sights are meant to clip directly onto the front and back of the Firestrike and aid in aiming. Height should be calibrated properly for stock blasters, while modified blasters may want to aim a little low.</p>
                         <p>NOTE: Since these are designed to be removable, they will get knocked off pretty easily. To attach them permanently, cut the back sights in half(to allow the blaster to be split open) and glue them on.</p>
+                        <br>
+                        <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBLUtQWG5XNm5kU2s" download="ffs"><h3>DOWNLOAD FRONT</h3></a> <!--Replace these with a picture-->
+                        <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBTXMxRUR5eldBWFE" download="frs"><h3>DOWNLOAD REAR</h3></a>
                     </div>
 
                 </div>
