Major updates to design

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                     <p>Tactical CAD is a place where you can download CAD models of various Nerf upgrades and parts so that you can print them out yourself! </p>
                     <br>
                     <h3>Where do the parts come from?</h3>
-                    <p>I build the parts myself, and print them out to test fitment. Any CAD parts I don't get to print out I put into the prototype category, but otherwise everything else is confirmed to fit.</p>
+                    <p>I build the parts myself, and print them out to test fitment. Any CAD parts I don't get to print out I put into the prototype category, but otherwise everything else is confirmed to fit. My design philosophy is "reversible", so most if not all of the parts here can be taken out and replaced with the stock parts if need be. No gluing required. </p>
                     <br>
                     <h3>Will there be updates often here?</h3>
                     <p>I don't know. This is a side project of mine and college precedes it. It also depends on whether I have any ideas on what to make.</p>
@@ -50,6 +50,9 @@
                     <h3>Can I suggest or submit new parts?</h3>
                     <p>Sure! As long as I have the Nerf I can make it! Just send me an email with the request! I can't guarantee a timescale, but I will definitely reply whether or not it will be feasible.</p>
                     <p>You can also submit your own CAD files if you want! I only ask that you can confirm fitment and send me a picture of that fitment for the product page. Credit will be given also, so give me some kind of alias or name when you email me the part.</p>
+                    <br>
+                    <h3>Are these available in other CAD formats?</h3>
+                    <p>I only have them as .ipt and .stl formats. They can be converted using third party software however.</p>
                     <br>
                     <h3>Contact</h3>
                     <p>For any questions or suggestions just use the email below<p>
