--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
                         </a>
                     </div>
 
-                    <p>As you can probably tell, this website is a WIP. </p>
+                    <br>
+                    <p>As you can probably tell, this website is a total WIP. </p>
+                    <br>
+                    <p>Welcome to Tactical CAD! Here you'll find several 3D-printable upgrades and modifications to your Nerf blasters!</p>
                 </div>
         </div>
     </body>
