--- a/products/ffrs.html
+++ b/products/ffrs.html
@@ -35,12 +35,21 @@
                     </div>
 
                     <div class="col-lg-6">
-                        <br><br><br>
+                        <br><br>
+                        <h3>Info</h3>
                         <p>These removable iron sights are meant to clip directly onto the front and back of the Firestrike and aid in aiming. Height should be calibrated properly for stock blasters, while modified blasters may want to aim a little low.</p>
                         <p>NOTE: Since these are designed to be removable, they will get knocked off pretty easily. To attach them permanently, cut the back sights in half(to allow the blaster to be split open) and glue them on.</p>
                         <br>
-                        <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBLUtQWG5XNm5kU2s" download="ffs"><h3>DOWNLOAD FRONT</h3></a> <!--Replace these with a picture-->
-                        <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBTXMxRUR5eldBWFE" download="frs"><h3>DOWNLOAD REAR</h3></a>
+                        <hr>
+                        <h3>Downloads</h3>
+                        <div class="downloadButton">
+                            <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBLUtQWG5XNm5kU2s" download="ffs">DOWNLOAD FRONT</a>
+                        </div>
+                        <br>
+                        <div class="downloadButton">
+                            <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBTXMxRUR5eldBWFE" download="frs">DOWNLOAD REAR</a>
+                        </div>
+
                     </div>
 
                 </div>
