--- a/lists/firestrike.html
+++ b/lists/firestrike.html
@@ -55,7 +55,9 @@
                     <!--Column 2-->
                     <div class="col-lg-4">
                         <li class="itemTile">
-                            <h3>Part2</h3>
+                            <img src="/TacticalCad/products/imgs/fpc/cad.jpg">
+                            <h3>Plunger-Barrel Coupler</h3>
+                            <p>Used in place of air restrictor</p>
                         </li>
 
                     </div>
