Added partial link dump on index

--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
                     <p>As you can probably tell, this website is a total WIP. </p>
                     <br>
                     <p>Welcome to Tactical CAD! Here you'll find several 3D-printable upgrades and modifications to your Nerf blasters!</p>
+
+                    <br>
+                    <p>Massive link dump for later. Feel free to take them if you want!</p>
+                    <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBLUtQWG5XNm5kU2s" download="ffs">Firestrike Front Sight</a>
+                    <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBTXMxRUR5eldBWFE" download="frs">Firestrike Rear Sight</a>
+                    <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBZWJVd1BZaGFpWlU" download="frs">Firestrike Plunger Coupler</a>
+                    <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBbUF5NHF0Nno4VnM" download="frs">Retaliator Hair Trigger</a>
+
                 </div>
         </div>
     </body>
