--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
 
                         <div class="carousel-inner" role="listbox" align="center">
                             <div class="item active">
-                                <img src="imgs/carousel1.jpg" alt="carousel1">   <!--Change this often!-->
+                                <img src="imgs/carousel1.jpg" alt="carousel1" class="carouselImage">   <!--Change this often!-->
                             </div>
                             <div class="item">
-                                <img src="imgs/carousel2.jpg" alt="carousel2">   <!--Change this often!-->
+                                <img src="imgs/carousel2.jpg" alt="carousel2" class="carouselImage">   <!--Change this often!-->
                             </div>
                             <div class="item">
-                                <img src="imgs/carousel3.jpg" alt="carousel3">   <!--Change this often!-->
+                                <img src="imgs/carousel3.jpg" alt="carousel3" class="carouselImage">   <!--Change this often!-->
                             </div>
                             <div class="item">
-                                <img src="imgs/carousel4.jpg" alt="carousel4">   <!--Change this often!-->
+                                <img src="imgs/carousel4.jpg" alt="carousel4" class="carouselImage">   <!--Change this often!-->
                             </div>
                             <div class="item">
-                                <img src="imgs/carousel5.jpg" alt="carousel5">   <!--Change this often!-->
+                                <img src="imgs/carousel5.jpg" alt="carousel5" class="carouselImage">   <!--Change this often!-->
                             </div>
                         </div>
 
@@ -75,10 +75,11 @@
 
                     <br>
                     <p>Massive link dump for later. Feel free to take them if you want!</p>
-                    <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBLUtQWG5XNm5kU2s" download="ffs">Firestrike Front Sight</a>
-                    <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBTXMxRUR5eldBWFE" download="frs">Firestrike Rear Sight</a>
-                    <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBZWJVd1BZaGFpWlU" download="frs">Firestrike Plunger Coupler</a>
-                    <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBbUF5NHF0Nno4VnM" download="frs">Retaliator Hair Trigger</a>
+                    <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBLUtQWG5XNm5kU2s" download="ffs">Firestrike Front Sight</a><br>
+                    <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBTXMxRUR5eldBWFE" download="frs">Firestrike Rear Sight</a><br>
+                    <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBZWJVd1BZaGFpWlU" download="frs">Firestrike Plunger Coupler</a><br>
+                    <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBbUF5NHF0Nno4VnM" download="frs">Retaliator Hair Trigger</a><br>
+                    <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBZER5V0VKT29rUEk" download="upr">Picatinny Rail Adapter</a><br>
 
                 </div>
         </div>
