--- a/products/rht.html
+++ b/products/rht.html
@@ -9,7 +9,7 @@
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="../scripts.js"></script>
         <link rel="stylesheet" type="text/css" href="../stylesheet.css">
-        <title>Tactical CAD - Retaliator Parts</title>
+        <title>Tactical CAD - Retaliator Hair Trigger</title>
     </head>
 
     <body>
@@ -29,37 +29,24 @@
 
                 <!--Content-->
                 <div class="col-lg-10" style="background-color: white;">
-                    <h1>Nerf Retaliator Parts</h1>
-                    <p>The Retaliator is a versatile spring clip-fed blaster. It is the original Modulus, with many interchangeable parts for different missions. </p>
-
-                    <!--Spacer-->
-                    <div class="col-lg-1">
+                    <div class="col-lg-6">
+                        <h2>Retaliator Hair Trigger</h2>
+                        <img src="imgs/rht/cad.jpg">
                     </div>
 
-                    <!--Column 1-->
-                    <div class="col-lg-4">
-
-                        <a href="/TacticalCad/products/rht.html">
-                            <li class="itemTile">
-                                <img src="/TacticalCad/products/imgs/rht/cad.jpg">
-                                <h3>Hair Trigger</h3>
-                                <p>Removes travel distance of the trigger</p>
-                            </li>
-                        </a>
-                    </div>
-
-                    <!--Spacer-->
-                    <div class="col-lg-2">
-                    </div>
-
-                    <!--Column 2-->
-                    <div class="col-lg-4">
+                    <div class="col-lg-6">
+                        <br><br>
+                        <h3>Info</h3>
+                        <p>This is a drop-in replacement trigger for the Nerf Retaliator. It is also compatible with the Nerf Recon. It removes the travel distance of the trigger, allowing for more precise firing. </p>
+                        <br>
+                        <hr>
+                        <h3>Downloads</h3>
+                        <div class="downloadButton">
+                            <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBbUF5NHF0Nno4VnM" download="rht">DOWNLOAD</a>
+                        </div>
 
                     </div>
 
-                    <!--Spacer-->
-                    <div class="col-lg-1">
-                    </div>
                 </div>
 
             </div>
