--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
         <script type="text/javascript" src="scripts.js"></script>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
         <title>Tactical CAD - Free Nerf CAD Upgrades</title>
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            ga('create', 'UA-71415120-1', 'auto');
+            ga('send', 'pageview');
+        </script>
     </head>
 
     <body>
