Added footer, fpc

--- a/about.html
+++ b/about.html
@@ -44,6 +44,7 @@
                     <ul>
                         <li>Retaliator</li>
                         <li>Firestrike</li>
+                        <li>Stryfe</li>
                         <li>Speedload 6</li>
                     </ul>
                     <br>
@@ -58,6 +59,7 @@
                     <p>For any questions or suggestions just use the email below<p>
                     <p>Email: tacticalcad@gmail.com</p>
 
+                    <script>printFooter();</script>
                 </div>
 
             </div>
