--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                     <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBbUF5NHF0Nno4VnM" download="rht">Retaliator Hair Trigger</a><br>
                     <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBZER5V0VKT29rUEk" download="upr">Picatinny Rail Adapter</a><br>
 
+                    <script>printFooter();</script>
                 </div>
         </div>
     </body>
