--- a/lists/firestrike.html
+++ b/lists/firestrike.html
@@ -66,6 +66,7 @@
                     <div class="col-lg-1">
                     </div>
 
+                    <script>printFooter();</script>
                 </div>
 
             </div>
