--- a/lists/retaliator.html
+++ b/lists/retaliator.html
@@ -60,6 +60,8 @@
                     <!--Spacer-->
                     <div class="col-lg-1">
                     </div>
+
+                    <script>printFooter();</script>
                 </div>
 
             </div>
