Minor fixes to firestrike.html

--- a/lists/firestrike.html
+++ b/lists/firestrike.html
@@ -54,12 +54,13 @@
 
                     <!--Column 2-->
                     <div class="col-lg-4">
-                        <li class="itemTile">
-                            <img src="/TacticalCad/products/imgs/fpc/cad.jpg">
-                            <h3>Plunger-Barrel Coupler</h3>
-                            <p>Used in place of air restrictor</p>
-                        </li>
-
+                        <a href="/TacticalCad/products/fpc.html">
+                            <li class="itemTile">
+                                <img src="/TacticalCad/products/imgs/fpc/cad.jpg">
+                                <h3>Plunger-Barrel Coupler</h3>
+                                <p>Used in place of air restrictor</p>
+                            </li>
+                        </a>
                     </div>
 
                     <!--Spacer-->
