Added fib.html, updated nerf.html, minor tweaks across the board

--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
                     <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBLUtQWG5XNm5kU2s" download="ffs">Firestrike Front Sight</a><br>
                     <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBTXMxRUR5eldBWFE" download="frs">Firestrike Rear Sight</a><br>
                     <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBZWJVd1BZaGFpWlU" download="fpc">Firestrike Plunger Coupler</a><br>
+                    <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBTUdzYmVkS3dOSnM" download="fib">Firestrike Inner Barrel</a><br>
                     <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBbUF5NHF0Nno4VnM" download="rht">Retaliator Hair Trigger</a><br>
                     <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBZER5V0VKT29rUEk" download="upr">Picatinny Rail Adapter</a><br>
+
 
                     <script>printFooter();</script>
                 </div>
