--- a/lists/firestrike.html
+++ b/lists/firestrike.html
@@ -46,6 +46,16 @@
                                 <p>Front and rear 3-post iron sights</p>
                             </li>
                         </a>
+                        <br>
+
+                        <a href="/TacticalCad/products/fib.html">
+                            <li class="itemTile">
+                                <img src="/TacticalCad/products/imgs/fib/cad.jpg">
+                                <h3>Brass Barrel Adapter</h3>
+                                <p>Barrel replacement to accomodate a brass barrel</p>
+                            </li>
+                        </a>
+                        <br>
                     </div>
 
                     <!--Spacer-->
@@ -61,6 +71,7 @@
                                 <p>Used in place of air restrictor</p>
                             </li>
                         </a>
+                        <br>
                     </div>
 
                     <!--Spacer-->
