--- a/lists/nerf.html
+++ b/lists/nerf.html
@@ -29,7 +29,10 @@
 
                 <!--Content-->
                 <div class="col-lg-10" style="background-color: white;">
-
+                    <h1>Nerf Parts</h1>
+                    <a href="\TacticalCad\lists\firestrike.html">Firestrike</a><br>
+                    <a href="\TacticalCad\lists\retaliator.html">Retaliator</a><br>
+                    <a href="\TacticalCad\lists\universal.html">Universal</a><br>
                 </div>
 
             </div>
