--- a/products/fib.html
+++ b/products/fib.html
@@ -9,7 +9,7 @@
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="../scripts.js"></script>
         <link rel="stylesheet" type="text/css" href="../stylesheet.css">
-        <title>Tactical CAD - Retaliator Parts</title>
+        <title>Tactical CAD - Firestrike Brass Barrel Adapter</title>
     </head>
 
     <body>
@@ -24,42 +24,28 @@
                 <!--Sidebar-->
                 <div class="col-lg-2">
                     <script type="text/javascript" src="../sidebar.js"></script>
-                    <script>determineSelected("hRetaliator");</script>   <!--Change for each site-->
+                    <script>determineSelected("hFirestrike");</script>   <!--Change for each site-->
                 </div>
 
                 <!--Content-->
                 <div class="col-lg-10" style="background-color: white;">
-                    <h1>Nerf Retaliator Parts</h1>
-                    <p>The Retaliator is a versatile spring clip-fed blaster. It is the original Modulus, with many interchangeable parts for different missions. </p>
-
-                    <!--Spacer-->
-                    <div class="col-lg-1">
+                    <div class="col-lg-6">
+                        <h2>Firestrike Brass Barrel Adapter</h2>
+                        <img src="imgs/fib/cad.jpg">
                     </div>
 
-                    <!--Column 1-->
-                    <div class="col-lg-4">
-
-                        <a href="/TacticalCad/products/rht.html">
-                            <li class="itemTile">
-                                <img src="/TacticalCad/products/imgs/rht/cad.jpg">
-                                <h3>Hair Trigger</h3>
-                                <p>Removes travel distance of the trigger</p>
-                            </li>
-                        </a>
+                    <div class="col-lg-6">
+                        <br><br>
+                        <h3>Info</h3>
+                        <p>This is a drop-in replacement barrel designed to friction fit a 17/32" brass barrel, without having to destroy the original one. It is designed directly off the original barrel, with only slight modifications to make the part stronger. It is compatible with every other part on the Firestrike.</p>
+                        <p>NOTE: Be careful with the tabs, since they are easy to break due to the nature of 3D printing compared to injection molding. </p>
                         <br>
-                    </div>
+                        <hr>
+                        <h3>Downloads</h3>
+                        <div class="downloadButton">
+                            <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBTUdzYmVkS3dOSnM" download="fib">DOWNLOAD</a>
+                        </div>>
 
-                    <!--Spacer-->
-                    <div class="col-lg-2">
-                    </div>
-
-                    <!--Column 2-->
-                    <div class="col-lg-4">
-
-                    </div>
-
-                    <!--Spacer-->
-                    <div class="col-lg-1">
                     </div>
 
                     <script>printFooter();</script>
