Added picatinny rail

--- a/products/upr.html
+++ b/products/upr.html
@@ -9,7 +9,7 @@
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="../scripts.js"></script>
         <link rel="stylesheet" type="text/css" href="../stylesheet.css">
-        <title>Tactical CAD - Universal Parts</title>
+        <title>Tactical CAD - Nerf Picatinny Rail Adapter</title>
     </head>
 
     <body>
@@ -29,38 +29,22 @@
 
                 <!--Content-->
                 <div class="col-lg-10" style="background-color: white;">
-                    <h1>Nerf Universal Parts</h1>
-                    <p>These parts are not blaster-specific, and can go on most Nerf blasters.</p>
-
-                    <!--Spacer-->
-                    <div class="col-lg-1">
+                    <div class="col-lg-6">
+                        <h2>Nerf Picatinny Rail Adapter</h2>
+                        <img src="imgs/upr/cad.jpg">
                     </div>
 
-                    <!--Column 1-->
-                    <div class="col-lg-4">
-
-                        <a href="/TacticalCad/products/upr.html">
-                            <li class="itemTile">
-                                <img src="/TacticalCad/products/imgs/upr/cad.jpg">
-                                <h3>Picatinny Rail Adapter</h3>
-                                <p>Nerf Rail to Picatinny Adapter</p>
-                            </li>
-                        </a>
+                    <div class="col-lg-6">
+                        <br><br>
+                        <h3>Info</h3>
+                        <p>This is a Nerf rail to Picatinny rail adapter. It slides on like a standard nerf accessory, and includes a nub so that it can lock the same way a standard nerf accessory locks in. Rail is 2.5" long, and should fit all rails in terms of size. </p>
                         <br>
+                        <hr>
+                        <h3>Downloads</h3>
+                        <div class="downloadButton">
+                            <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBZER5V0VKT29rUEk" download="fib">DOWNLOAD</a>
+                        </div>>
 
-                    </div>
-
-                    <!--Spacer-->
-                    <div class="col-lg-2">
-                    </div>
-
-                    <!--Column 2-->
-                    <div class="col-lg-4">
-
-                    </div>
-
-                    <!--Spacer-->
-                    <div class="col-lg-1">
                     </div>
 
                     <script>printFooter();</script>
