Commented out footer for now, updated carousel

--- a/products/fib.html
+++ b/products/fib.html
@@ -44,7 +44,7 @@
                         <h3>Downloads</h3>
                         <div class="downloadButton">
                             <a href="https://drive.google.com/uc?export=download&id=0B4agE3vyB4PBTUdzYmVkS3dOSnM" download="fib">DOWNLOAD</a>
-                        </div>>
+                        </div>
 
                     </div>
 
