Fixed missing end div in index, modified banner slightly, put footer back in

--- a/lists/nerf.html
+++ b/lists/nerf.html
@@ -33,9 +33,11 @@
                     <a href="\TacticalCad\lists\firestrike.html">Firestrike</a><br>
                     <a href="\TacticalCad\lists\retaliator.html">Retaliator</a><br>
                     <a href="\TacticalCad\lists\universal.html">Universal</a><br>
+                    <script>printFooter();</script>
                 </div>
 
             </div>
+
         </div>
     </body>
 
